# ml-airbnb-paris

./: .gitignore  README.md  pyproject.toml
data/: paris_airbnb.csv  paris_airbnb_test.csv
models/: encoder_neighbourhood.pkl  encoder_room_type.pkl  gradient_boosting.pkl  linear_regression.pkl  random_forest.pkl  scaler_accommodates.pkl  scaler_bathrooms.pkl  scaler_beds.pkl  scaler_latitude.pkl  scaler_longitude.pkl  scaler_minimum_nights.pkl  scaler_price.pkl  scaler_zipcode.pkl  svr.pkl
src/: evaluator.py  main.py  predictor.py  trainer.py  training.py
